# taqwa-tracker-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
audit/: entity.py  model.py  service.py
auth/: entity.py  model.py  service.py
chat/: agent.py  entity.py  model.py  service.py
config/: cors.py  database.py  email.py  gemini.py  jwt.py  openrouter.py  pinecone.py  security.py  supabase.py
db/: audit.sql  auth.sql  chat.sql  feedback.sql  hadith.sql  library.sql  quran.sql
entity/: agent.py  audit.py  auth.py  chat.py  surah.py  user.py
feedback/: entity.py  model.py  service.py
hadith/: entity.py  model.py  service.py
model/: agent.py  chat.py  surah.py  user.py
quran/: entity.py  model.py  service.py
routers/: admin.py  audit.py  auth.py  chat.py  feedback.py  hadith.py  library.py  quran.py  status.py  user.py
scripts/: audit.sql  auth.sql
services/: agent_service.py  audit.py  auth.py  chat_service.py  email.py  quran.py  surah_service.py  user_service.py
shared/: agent.py  email.py  security.py
