[project]
name = "taqwa-tracker-api"
version = "0.1.0"
description = "API for Taqwa Tracker Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
