[project]
name = "taqwa-tracker-api"
version = "0.1.0"
description = "API for Taqwa Tracker Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.5",
    "hijri-converter>=2.3.2.post1",
    "openai>=2.3.0",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
