[project]
name = "taqwa-tracker-api"
version = "0.3.2"
description = "API for Taqwa Tracker Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.118.0",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.5",
    "hijri-converter>=2.3.2.post1",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "openai>=2.3.0",
    "passlib[bcrypt]==1.7.4",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
